contrast issues

--- a/lesson02/css/small.css
+++ b/lesson02/css/small.css
@@ -10,7 +10,7 @@ body {
 footer {
     background-color: rgb(56, 153, 243);
     text-align: center;
-    color: white;
+    color: black;
     border-radius: 5px;
     padding: 1em;
     }
